--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port = 8095
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.datasource.url=jdbc:postgresql://localhost/postgres
+spring.datasource.url=jdbc:postgresql://localhost/dbCG
 spring.datasource.username=postgres
-spring.datasource.password=fred
+spring.datasource.password=pwdDB
+
+spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
