--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port = 8095
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.datasource.url=jdbc:postgresql://localhost/projetfilrouge
+spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
-spring.datasource.password=superadmin
+spring.datasource.password=fred
 
 spring.datasource.initialization-mode=always
 
