Filter Cors origin on localhost:4200 and adding UTF-8 to postgres database using docker

--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -2,6 +2,9 @@ version: '2'
 services:
     app-postgresql:
         image: postgres:10.1
+        build:
+            context: .
+            dockerfile: Dockerfile.postgresdb
         volumes:
             - ./postgres/postgresql/:/var/lib/postgresql/data/
         environment:
