--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -6,9 +6,10 @@ services:
             context: .
             dockerfile: Dockerfile.postgresdb
         volumes:
-            - ./postgres/postgresql/:/var/lib/postgresql/data/
+            - /var/lib/postgresql/data/
         environment:
-            - POSTGRES_USER=postgres
-            - POSTGRES_PASSWORD=fred
+            - POSTGRES_USER=app
+            - POSTGRES_PASSWORD=filRouge
+            - POSTGRES_DB=filrouge
         ports:
             - 5432:5432
