--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-server.port = 8095
+server.port = 8090
+
+#  client url for cors filter
+client.url=http://localhost:4200
+
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.datasource.url=jdbc:postgresql://localhost/filrouge
@@ -10,7 +14,15 @@ spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
- 
-# LIQUIBASE
-# spring.liquibase.enabled=true
-# spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
+
+# folder where search files to import in database
+dataBaseInitialization.importFolder=external_datas\\import
+
+# folder where files imported where placed after successful import
+dataBaseInitialization.backupFolder=external_datas\\imported
+
+# file name for aliments
+dataBaseInitialization.alimentsFile=aliments.csv
+
+# file name for glycemic indexes
+dataBaseInitialization.glycemicFile=glycemique.csv
